# BuildingAndConnectingLibraries

./: .gitignore  .gitignore.txt
Task_1_Static_libraries/: Task_1_Static_libraries.sln
Task_2_Dinamic_libraries/: Task_2_Dinamic_libraries.sln
Task_3_DinamicLibrariesCMake/: CMakeLists.txt  Task_3_DinamicLibrariesCMake.sln
Task_3_DinamicLibrariesCMake/DinamicLibrariesCMake/: DinamicClass.cpp  DinamicClass.h  DinamicLibrariesCMake.vcxproj
Task_3_DinamicLibrariesCMake/DinamicLibrariesCMake/x64/Debug/: DinamicLibrariesCMake.dll.recipe  DinamicLibrariesCMake.ilk  vc143.idb
Task_3_DinamicLibrariesCMake/DinamicLibrariesCMake/x64/Debug/DinamicL.98193d4f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DinamicLibrariesCMake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
Task_3_DinamicLibrariesCMake/DinamicLibrariesCMakeClients/: DinamicLibrariesCMakeClients.cpp  DinamicLibrariesCMakeClients.vcxproj  DinamicLibrariesCMakeClients.vcxproj.filters
Task_3_DinamicLibrariesCMake/DinamicLibrariesCMakeClients/x64/Debug/: DinamicLibrariesCMakeClients.exe.recipe  DinamicLibrariesCMakeClients.ilk  vc143.idb
Task_3_DinamicLibrariesCMake/DinamicLibrariesCMakeClients/x64/Debug/DinamicL.52edbd51.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DinamicLibrariesCMakeClients.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Task_3_DinamicLibrariesCMake/x64/Debug/: DinamicLibrariesCMake.exp  DinamicLibrariesCMake.lib
Task_4_HierarchyClassInDLL/: Task_4_HierarchyClassInDLL.sln
(+94 files in other folders)
